<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:text="Welcome to Kickdroid!" />

            <TextView
                android:id="@+id/subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                tools:text="Set your name by tapping here." />

            <androidx.cardview.widget.CardView
                android:id="@+id/startMatchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:id="@+id/startMatchIcon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="8dp"
                        app:iiv_color="@color/colorPrimary"
                        app:iiv_icon="cmd-sword-cross"
                        tools:src="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/startMatchText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            tools:text="@string/main_start_match" />

                        <TextView
                            android:id="@+id/startMatchStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_set_name_status"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bestPlayersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="8dp"
                        app:iiv_color="@color/colorPrimary"
                        app:iiv_icon="cmd-trophy"
                        tools:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/main_best_players"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
